--- a/CSS/code/bg/index.html
+++ b/CSS/code/bg/index.html
@@ -8,7 +8,10 @@
    <link rel="shortcut icon" href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRb6NRFRqK_bR4FE_zgn47Kimr4Qc-hI8miOA&s" type="image/x-icon">
 </head>
 <body>
-    <h1>Hello world</h1>
+    <div class="div">
+        <h1 class="heading">Hello world</h1>
+    </div>
+    <img src="https://letsenhance.io/static/8f5e523ee6b2479e26ecc91b9c25261e/1015f/MainAfter.jpg" alt="lizard">
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Molestias voluptatum quod culpa hic alias voluptas maiores ut odit reprehenderit eos!</p>
 </body>
 </html>
