--- a/HTML-CSS-Project/index.html
+++ b/HTML-CSS-Project/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-      <div class="logo animate__animated animate__bounce animate__infinite">PRA<span>SAD</span></div>
+      <div class="logo animate__animated animate__bounce animate__repeat-2">PRA<span>SAD</span></div>
       <nav class="menu">
         <ul>
             <li><a href="#banner">Home</a></li>
