--- a/HTML/code/projects/resume/index.html
+++ b/HTML/code/projects/resume/index.html
@@ -25,7 +25,7 @@
 			</div>
 			<div>
 				<h2>JohnDoe</h2>
-				<address>
+				<address><i class="fa-solid fa-location-dot"></i>
 					no 202,swan lake near,<br />
 					kphb,&nbsp; hyderabad
 				</address>
