--- a/JS/code/DOM1/index.html
+++ b/JS/code/DOM1/index.html
@@ -8,6 +8,7 @@
 <body>
     <p class="para">Hello World</p>
     <p id="pa">Bye word</p>
+    <button onclick="change()">click me</button>
     <script src="./script.js"></script>
 </body>
 </html>
