--- a/JS/Projects/bg-changer/index.html
+++ b/JS/Projects/bg-changer/index.html
@@ -4,19 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <style>
-        #pa{
-           /* visibility: hidden;*/
-        }
-        .x{
-            background-color: black;
-            color: white;
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <p class="para">Hello World</p>
-    <p id="pa">Bye word</p>
     <button onclick="change()">click me</button>
     <script src="./script.js"></script>
 </body>
