--- a/JS/Projects/jokeAPI/index.html
+++ b/JS/Projects/jokeAPI/index.html
@@ -10,6 +10,7 @@
     <div id="main">
         
     </div>
+    <button id="generate">generate</button>
     <script src="./index.js"></script>
 </body>
 </html>
