--- a/JS/code/ES6/index.html
+++ b/JS/code/ES6/index.html
@@ -6,6 +6,6 @@
     <title>ES6</title>
 </head>
 <body>
-    <script src="./script.js"></script>
+<script type="module" src="./script2.js"></script>
 </body>
 </html>
