--- a/mainProject/product.html
+++ b/mainProject/product.html
@@ -23,7 +23,7 @@
                 <a href="" class="nav-link text-white">contact</a>
             </li>
             <li class=" nav-item">
-                <a href="" class="nav-link text-white">Cart:0</a>
+                <a href="./cart.html" class="nav-link text-white">Cart: <span id="total"></span></a>
             </li>
 
          </ul>
@@ -51,5 +51,6 @@
 
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script src="./product.js"></script>
+    <script src="./common.js"></script>
 </body>
 </html>
